backend setup complete

--- a/WeatherApp-backend/server/model-config.json
+++ b/WeatherApp-backend/server/model-config.json
@@ -34,5 +34,13 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "City": {
+    "dataSource": "monogo",
+    "public": true
+  },
+  "WWUsers": {
+    "dataSource": "monogo",
+    "public": true
   }
 }
