--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
+    "start": "ionic serve -p 8081 --nolivereload",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
@@ -20,10 +21,12 @@
     "@angular/http": "4.0.2",
     "@angular/platform-browser": "4.0.2",
     "@angular/platform-browser-dynamic": "4.0.2",
-    "@ionic-native/core": "3.6.1",
+    "@ionic-native/core": "^3.6.1",
+    "@ionic-native/geolocation": "^3.10.3",
     "@ionic-native/splash-screen": "3.6.1",
-    "@ionic-native/status-bar": "3.6.1",
+    "@ionic-native/status-bar": "^3.6.1",
     "@ionic/storage": "2.0.1",
+    "cordova-plugin-geolocation": "^2.4.3",
     "ionic-angular": "3.1.1",
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
+    "@ionic/cli-plugin-cordova": "1.2.1",
     "@ionic/cli-plugin-ionic-angular": "1.2.0",
     "typescript": "~2.2.1"
   },
@@ -44,5 +48,10 @@
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [],
-  "description": "WeatherApp: An Ionic project"
+  "description": "WeatherApp: An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-geolocation": {}
+    }
+  }
 }
